feat: Implement robust grid waiting mechanism to reduce flakiness in E2E tests